--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,17 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.4.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>2.5.9</version>
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>tn.esprit</groupId>
+	<groupId>tn.esprit.rh</groupId>
 	<artifactId>ExamThourayaS2</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>ExamThourayaS2</name>
-	<description>Demo project for Spring Boot</description>
+	<version>1.0</version>
+	<name>achat</name>
+	<description>Projet pour le module DevOps</description>
 	<properties>
 		<java.version>1.8</java.version>
+		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -25,17 +26,35 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+ 
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-boot-starter</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -43,8 +62,35 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>2.4.1</version><!--$NO-MVN-MAN-VER$-->
+				<configuration>
+					<excludes>
+						<exclude>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+						</exclude>
+					</excludes>
+				</configuration>
 			</plugin>
+
+			<plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-resources-plugin</artifactId>
+			  <version>3.1.0</version><!--$NO-MVN-MAN-VER$-->
+		    </plugin>
+		    
+		  
+
+
 		</plugins>
 	</build>
-
+	
+       <distributionManagement>
+        <repository>
+         <id>deploymentRepo</id>
+         <name>admin</name>
+        <url>http://192.168.33.10:8081/repository/maven-releases/</url>
+       </repository>
+      </distributionManagement>
+      
 </project>
